#/*****************************************************************************
# *
# * $Id$
# *
# * Project:  Optimization Modeling of Fire Fighter Resources
# * Purpose:  CMake script
# * Author:   Kyle Shannon <kyle@pobox.com>
# *
# *****************************************************************************
# *
# * THIS SOFTWARE WAS DEVELOPED AT THE ROCKY MOUNTAIN RESEARCH STATION (RMRS)
# * MISSOULA FIRE SCIENCES LABORATORY BY EMPLOYEES OF THE FEDERAL GOVERNMENT
# * IN THE COURSE OF THEIR OFFICIAL DUTIES. PURSUANT TO TITLE 17 SECTION 105
# * OF THE UNITED STATES CODE, THIS SOFTWARE IS NOT SUBJECT TO COPYRIGHT
# * PROTECTION AND IS IN THE PUBLIC DOMAIN. RMRS MISSOULA FIRE SCIENCES
# * LABORATORY ASSUMES NO RESPONSIBILITY WHATSOEVER FOR ITS USE BY OTHER
# * PARTIES,  AND MAKES NO GUARANTEES, EXPRESSED OR IMPLIED, ABOUT ITS QUALITY,
# * RELIABILITY, OR ANY OTHER CHARACTERISTIC.
# *
# * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS
# * OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL
# * THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
# * FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
# * DEALINGS IN THE SOFTWARE.
# *
# ****************************************************************************/
# This is set arbitrarily at 2.6.  If there is proof that it works better, 
# set it.  Also set all sub CMakeLists.txt
# *****************************************************************************
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.8)

OPTION(SQLITE_SHELL "Build the sqlite shell" OFF)
MARK_AS_ADVANCED(SQLITE_SHELL)

ADD_DEFINITIONS(-DSQLITE_MAX_ATTACHED=25)
ADD_DEFINITIONS(-DSQLITE_ENABLE_RTREE=1)
ADD_LIBRARY(sqlite3 OBJECT sqlite3.c)

SET(SQLITE3_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/sqlite PARENT_SCOPE)

IF(SQLITE_SHELL)
    ADD_EXECUTABLE(sqlite_shell shell.c sqlite3.c)
    SET(LINK_LIBS sqlite3)
    IF(NOT WIN32)
        FIND_PACKAGE (Threads)
        SET(LINK_LIBS ${LINK_LIBS} ${CMAKE_DL_LIBS} ${CMAKE_THREAD_LIBS_INIT})
    ENDIF(NOT WIN32)
    #TARGET_LINK_LIBRARIES(sqlite_shell ${LINK_LIBS})
ENDIF(SQLITE_SHELL)
