#/*****************************************************************************
# *
# * $Id: CMakeLists.txt 119 2012-08-02 22:08:03Z kyle.shannon $
# *
# * Project:  Optimization Modeling of Fire Fighter Resources
# * Purpose:  CMake script
# * Author:   Kyle Shannon <kyle@pobox.com>
# *
# *****************************************************************************
# *
# * THIS SOFTWARE WAS DEVELOPED AT THE ROCKY MOUNTAIN RESEARCH STATION (RMRS)
# * MISSOULA FIRE SCIENCES LABORATORY BY EMPLOYEES OF THE FEDERAL GOVERNMENT
# * IN THE COURSE OF THEIR OFFICIAL DUTIES. PURSUANT TO TITLE 17 SECTION 105
# * OF THE UNITED STATES CODE, THIS SOFTWARE IS NOT SUBJECT TO COPYRIGHT
# * PROTECTION AND IS IN THE PUBLIC DOMAIN. RMRS MISSOULA FIRE SCIENCES
# * LABORATORY ASSUMES NO RESPONSIBILITY WHATSOEVER FOR ITS USE BY OTHER
# * PARTIES,  AND MAKES NO GUARANTEES, EXPRESSED OR IMPLIED, ABOUT ITS QUALITY,
# * RELIABILITY, OR ANY OTHER CHARACTERISTIC.
# *
# * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS
# * OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL
# * THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
# * FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
# * DEALINGS IN THE SOFTWARE.
# *
# ****************************************************************************/

CMAKE_MINIMUM_REQUIRED(VERSION 2.8.8)

INCLUDE_DIRECTORIES(${GDAL_INCLUDE_DIR}
                    ${PROJECT_SOURCE_DIR}/flammap/win32)
SET(FLM_SRCS $<TARGET_OBJECTS:flammap32>)


SET(LINK_LIBS ${GDAL_LIBRARY})
ADD_EXECUTABLE(flm_test_1 ${FLM_SRCS} flm_test_1.cpp)
ADD_EXECUTABLE(flm_test_2 ${FLM_SRCS} flm_test_2.cpp)
TARGET_LINK_LIBRARIES(flm_test_1 ${LINK_LIBS})
TARGET_LINK_LIBRARIES(flm_test_2 ${LINK_LIBS})
ADD_DEPENDENCIES(flm_test_1 flammap32)
ADD_DEPENDENCIES(flm_test_2 flammap32)
ADD_TEST(flm_test_1 ${EXECUTABLE_OUTPUT_PATH}/flm_test_1)
ADD_TEST(flm_test_2 ${EXECUTABLE_OUTPUT_PATH}/flm_test_2)

